--- a/src/main/resources/templates/pizzeria/dettaglio.html
+++ b/src/main/resources/templates/pizzeria/dettaglio.html
@@ -49,8 +49,11 @@
 	    </div>
 	  </nav>
 	<div class="container">
-		<p th:text="${dettaglio.descrizone}"></p>
-		
+	<div class="d-flex mt-5">
+		<div>
+		<h1 class="mt-10" th:text="${dettaglio.descrizione}"></h1mt>
+		</div>
+	</div>
 		 <script th:src="@{/webjars/bootstrap/5.1.3/js/bootstrap.bundle.min.js}"></script>
-		/body>
-		/html>
+		</body>
+		</html>
