--- a/src/main/resources/templates/pizzeria/index.html
+++ b/src/main/resources/templates/pizzeria/index.html
@@ -12,7 +12,7 @@
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-<title>INDEX</title>
+<title>Pizzeria</title>
 </head>
 <body>
 	<style>
@@ -49,10 +49,10 @@
 	    </div>
 	  </nav>
 	<div class="container">
-		
+	<div class="row">
 		<h1 class="pt-5 pb-5 ">Menu</h1>
-	  <div th:unless="${pizze.isEmpty()}" th:each="item:${pizze}" class="card" style="width: 18rem;">
-	    <img th:src="@{${item.fotoUrl}}" class="card-img-top" alt="...">
+	  <div th:unless="${pizze.isEmpty()}" th:each="item:${pizze}" class="card m-5 p-0" style="width: 18rem;">
+	    <img th:src="@{${item.fotoUrl}}" class="card-img-top " alt="...">
 	     <div class="card-body">
 	      <h5 class="card-title" th:text ="${item.nome}"></h5>
 	      <p class="card-text" th:text ="${item.descrizione}"></p>
@@ -64,7 +64,7 @@
 		<p> Non ci sono pizze nel menu </p>
 	  </div>
 	</div>
-	
+	<div>
 	
   <script th:src="@{/webjars/bootstrap/5.1.3/js/bootstrap.bundle.min.js}"></script>
 </body>
