--- a/src/main/resources/templates/pizzeria/dettaglio.html
+++ b/src/main/resources/templates/pizzeria/dettaglio.html
@@ -13,8 +13,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
 <title>Dettaglio</title>
-</head>
-<body>
+
 	<style>
 	    .navbar {
 	      background-color: #800020; /* Bordeaux */
@@ -28,30 +27,27 @@
 	  </style>
 	</head>
 	<body>
-	  <!-- Navbar -->
-	  <nav class="navbar navbar-expand-lg navbar-dark">
-	    <a class="navbar-brand ms-3" href="#">Pizzeria</a>
-	    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-	      <span class="navbar-toggler-icon"></span>
-	    </button>
-	    <div class="collapse navbar-collapse" id="navbarNav">
-	      <ul class="navbar-nav ml-auto">
-	        <li class="nav-item active">
-	          <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
-	        </li>
-	        <li class="nav-item active">
-	          <a class="nav-link" href="http://localhost:8080/pizzeria/menu">Menu</a>
-	        </li>
-	        <li class="nav-item">
-	          <a class="nav-link" href="#">Descrizione</a>
-	        </li>
-	      </ul>
-	    </div>
-	  </nav>
+		<!-- Navbar -->
+		  <nav class="navbar navbar-expand-lg navbar-dark">
+		    <a class="navbar-brand ms-3" href="		http://localhost:8080/pizzeria/menu">Pizzeria</a>
+		    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		      <span class="navbar-toggler-icon"></span>
+		    </button>
+		    <div class="collapse navbar-collapse" id="navbarNav">
+		      <ul class="navbar-nav ml-auto">
+		        <li class="nav-item active">
+		          <a class="nav-link" href="http://localhost:8080/pizzeria/menu">Menu <span class="sr-only"></span></a>
+		        </li>
+		        <li class="nav-item">
+		          <a class="nav-link" href="http://localhost:8080/pizzeria/create">Crea</a>
+		        </li>
+		      </ul>
+		    </div>
+		  </nav>
 	<div class="container">
 	<div class="d-flex mt-5">
 		<div>
-		<h1 class="mt-10" th:text="${dettaglio.descrizione}"></h1mt>
+		<h1 class="mt-10" th:text="${dettaglio.descrizione}"></h1>
 		</div>
 	</div>
 		 <script th:src="@{/webjars/bootstrap/5.1.3/js/bootstrap.bundle.min.js}"></script>
