--- a/src/main/resources/templates/pizzeria/index.html
+++ b/src/main/resources/templates/pizzeria/index.html
@@ -40,19 +40,28 @@
 		        <li class="nav-item">
 		          <a class="nav-link" href="http://localhost:8080/pizzeria/create">Crea</a>
 		        </li>
+			
 		      </ul>
 		    </div>
 		  </nav>
 	<div class="container">
 	<div class="row">
 		<h1 class="pt-5 pb-5 ">Menu</h1>
-	  <div th:unless="${pizze.isEmpty()}" th:each="item:${pizze}" class="card m-5 p-0" style="width: 18rem;">
-	    <img th:src="@{${item.fotoUrl}}" class="card-img-top " alt="...">
+	  <div th:unless="${pizze.isEmpty()}" th:each="pizza:${pizze}" class="card m-5 p-0" style="width: 18rem;">
+	    <img th:src="@{${pizza.fotoUrl}}" class="card-img-top " alt="...">
 	     <div class="card-body">
-	      <h5 class="card-title" th:text ="${item.nome}"></h5>
-	      <p class="card-text" th:text ="${item.descrizione}"></p>
-		  <p class="card-text" th:text ="|€ ${#numbers.formatDecimal(item.price, 1, 2, 'COMMA')}|"></p>
-          <a th:href="@{|/pizzeria/dettaglio/${item.id}|}" class="btn btn-primary">Dettaglio</a>
+	      <h5 class="card-title" th:text ="${pizza.nome}"></h5>
+	      <p class="card-text" th:text ="${pizza.descrizione}"></p>
+		  <p class="card-text" th:text ="|€ ${#numbers.formatDecimal(pizza.price, 1, 2, 'COMMA')}|"></p>
+        <div class="d-flex gap-2">  <a th:href="@{|/pizzeria/dettaglio/${pizza.id}|}" class="btn btn-primary">Dettaglio</a>
+		  
+		  <a class="btn btn-primary" th:href="@{|/pizzeria/edit/${pizza.id}|}"> <i	class="bi bi-pencil-square"></i></a>
+	    
+     	<form th:action=" @{|/pizzeria/delete/${pizza.id}|}" method="post">
+		 <button class="btn btn-danger" type="submit" id="submitButton"	th:data-confirm-delete="|Sei sicuro di voler cancellare la pizza?|"
+			click="if(!confirm(this.getAttribute('data-confirm-delete'))) return false"> <i class="bi bi-trash"></i>
+		  </button>
+	  </form></div>
 	    </div>
 	  </div>
        <div th:if ="${pizze.isEmpty()}">
