--- a/src/main/resources/templates/pizzeria/create.html
+++ b/src/main/resources/templates/pizzeria/create.html
@@ -52,19 +52,23 @@
 			<div class="row mt-5  justify-content-center">
 				<div class="col-7 ">
 					<h1 class="mb-5">Aggiungi una nuova pizza </h1>
+					
 					<form id="form-pizza" th:action="@{/pizzeria/create}" method="post" th:object="${pizza}">
 						<div class="mb-3">
+						  <label for="formFile" class="form-label">fotoUrl</label>
+						  <input class="form-control" type="file" id="fotoUrl" name="fotoUrl">
+						</div>
+						<div class="mb-3">
 							<label for="nome" class="form-label">Nome</label>
-							<input type="text" class="form-control" id="nome" placeholder="nome pizza">
-							
+							<input type="text" class="form-control" id="nome" placeholder="nome pizza" 	name="nome" >
 							</div>
 							<div class="mb-3">
 								<label for="descrizione" class="form-label">Descrizione</label>
-								<textarea class="form-control" id="descrizione" placeholder="Descrizione pizza"></textarea>
+								<textarea class="form-control" id="descrizione" placeholder="Descrizione pizza" name="descrizione"  ></textarea>
 								</div>
 								<div class="mb-3">
 									<label for="prezzo" class="form-label">Prezzo</label>
-									<input type="number" class="form-control" id="prezzo" placeholder="Prezzo pizza">
+									<input type="number" class="form-control" id="prezzo" name="price" placeholder="Prezzo pizza">
 									<div th:if="${#fields.hasAnyErrors()}">
 										<ul>
 											<li th:each="err : ${#fields.allErrors()}" th:text="${err}">
@@ -84,9 +88,3 @@
 	</body>
 	
 	</html>
-
-		</div>
-	</div>
-		 <script th:src="@{/webjars/bootstrap/5.1.3/js/bootstrap.bundle.min.js}"></script>
-		</body>
-		</html>
