--- a/src/main/resources/templates/pizzeria/index.html
+++ b/src/main/resources/templates/pizzeria/index.html
@@ -48,7 +48,7 @@
 	<div class="row">
 		<h1 class="pt-5 pb-5 ">Menu</h1>
 	  <div th:unless="${pizze.isEmpty()}" th:each="pizza:${pizze}" class="card m-5 p-0" style="width: 18rem;">
-	    <img th:src="@{${pizza.fotoUrl}}" class="card-img-top " alt="...">
+	    <img th:src="@{${'/img/' + pizza.fotoUrl}}" class="card-img-top " alt="...">
 	     <div class="card-body">
 	      <h5 class="card-title" th:text ="${pizza.nome}"></h5>
 	      <p class="card-text" th:text ="${pizza.descrizione}"></p>
