--- a/src/main/resources/templates/pizzeria/create.html
+++ b/src/main/resources/templates/pizzeria/create.html
@@ -42,8 +42,8 @@
 						<a class="nav-link" href="http://localhost:8080/pizzeria/menu">Menu <span
 								class="sr-only"></span></a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="http://localhost:8080/pizzeria/create">Crea</a>
+					<li class="nav-item disabled">
+						<a class="nav-link" href="http://localhost:8080/pizzeria/create" >Crea</a>
 					</li>
 				</ul>
 			</div>
