--- a/src/main/resources/templates/pizzeria/dettaglio.html
+++ b/src/main/resources/templates/pizzeria/dettaglio.html
@@ -45,9 +45,13 @@
 		    </div>
 		  </nav>
 	<div class="container">
-	<div class="d-flex mt-5">
-		<div>
-		<h1 class="mt-10" th:text="${dettaglio.descrizione}"></h1>
+	<div class="d-flex mt-5 justify-content-center">
+		<div class="text-center">
+			<h1 class="mt-10" th:text="${dettaglio.nome}"></h1>
+		
+		<h1 class="m-5" 		th:text ="|€ ${#numbers.formatDecimal(dettaglio.price, 1, 2, 'COMMA')}|"></h1>
+		<img  class="rounded-circle"		style="width: 40rem" th:src="@{${'/img/' + dettaglio.fotoUrl}}"></img>
+		<h2 class="m-5" th:text="${dettaglio.descrizione}"></h2>
 		</div>
 	</div>
 		 <script th:src="@{/webjars/bootstrap/5.1.3/js/bootstrap.bundle.min.js}"></script>
